fix double css spacing

--- a/public/components/layout/_layout.global.css
+++ b/public/components/layout/_layout.global.css
@@ -104,9 +104,10 @@
     padding-top: 0;
     border-top: 0;
   }
-  & .layout-header + & {
-    margin-top: 0;
-  }
+}
+
+.layout-header + .layout-section {
+  margin-top: 0;
 }
 
 /*
